<resources>
    <string name="app_name">Bare+Sum</string>
    <string name="txtStart">Start spill</string>
    <string name="txtStatistikk">Se statistikk</string>
    <string name="txtPreferanser">Preferanser</string>

    <!-- Preferanser -->

    <string name="antallOppgaver">Antall Oppgaver</string>
    <string name="txtVelgAntall">Antall oppgaver per spill.</string>
    <string name="box5Oppg">5 Oppgaver</string>
    <string name="box10Oppg">10 Oppgaver</string>
    <string name="box25Oppg">25 Oppgaver</string>

    <!-- Språk -->

    <string name="txtVelgSprok">Velg språk</string>
    <string name="optNorsk">Norsk</string>
    <string name="optTysk">Tysk</string>
    <string name="sprok">Språk</string>


    <string name="feil">Feil. Riktig svar er: </string>
    <string name="riktig">Riktig!</string>


    <!-- Avslutt spill Dialog -->

    <string name="titleDialog1">Avslutt spillet?</string>
    <string name="Avslutt">Avslutt</string>
    <string name="Avbryt">Avbryt</string>

    <!-- Nytt spill dialog -->
    <!-- <string name="titleNyttSpillDialog">Vil  du gå tilbake til hovedskjermen eller starte nytt spill?</string> -->
    <string name="startNytt">Start nytt spill</string>
    <string name="tilbake">Gå tilbake</string>


    <string name="id">ID</string>
    <string name="dato">Dato</string>
    <string name="riktige">Riktige</string>
    <string name="antfeil">Feil</string>
    <string name="totalt">Antall oppgaver</string>

    <!-- Spill -->

    <string name="fjernSvar">Fjern</string>
    <string name="leverSvar">Lever</string>
    <string name="ikkeNokOppgaver">Må gjenbruke oppgaver for nytt spill med</string>
    <string name="oppgaver">oppgaver</string>

    <string name="feilID">ID består kun av tall</string>
    <string name="titleNyttSpillDialog"> hallo</string>



    <string name="slett">Slett med ID</string>
</resources>